Worked on verrical scrollbar issue.

--- a/src/index.less
+++ b/src/index.less
@@ -286,11 +286,11 @@ body {
   right: 0;
   background-color: #f4f5f8;
   opacity: 0.9;
+  z-index: 16;
   &.horizontal {
     right: 15px;
     overflow-x: scroll;
     overflow-y: hidden;
-    z-index: 12;
     > div {
       height: 1px;
       background: #ddd;
